--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,8 @@
     "ext-zip": "*",
     "illuminate/support": "5.*",
     "guzzlehttp/guzzle": "6.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.4"
   }
 }
