--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,8 @@
     "guzzlehttp/guzzle": "6.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.4"
+    "phpunit/phpunit": "^5.5",
+    "orchestra/testbench": "3.2.*",
+    "mockery/mockery": "^0.9.5"
   }
 }
