--- a/composer.json
+++ b/composer.json
@@ -34,15 +34,18 @@
       "Codedge\\Updater\\Tests\\": "tests/"
     }
   },
+  "config": {
+    "sort-packages": true
+  },
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.1",
     "ext-zip": "*",
     "illuminate/support": "5.*",
     "guzzlehttp/guzzle": "6.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.5",
-    "orchestra/testbench": "3.2.*",
+    "phpunit/phpunit": "^7",
+    "orchestra/testbench": "3.7.*",
     "mockery/mockery": "^0.9.5"
   }
 }
