--- a/composer.json
+++ b/composer.json
@@ -54,8 +54,8 @@
     "guzzlehttp/guzzle": "6.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0",
-    "mockery/mockery": "^0.9.5",
-    "orchestra/testbench": "~3.4.2|~3.5.0|~3.6.0|~3.7.0"
+    "phpunit/phpunit": "^8.0",
+    "mockery/mockery": "^1.0",
+    "orchestra/testbench": "^4.0"
   }
 }
