Generate clover reports for codecov

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,4 +22,7 @@
         </whitelist>
     </filter>
 
+    <logging>
+        <log type="coverage-clover" target="clover.xml"/>
+    </logging>
 </phpunit>
