--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,6 +44,7 @@ jobs:
         name: Push coverage to codecov
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./clover.xml
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: true
