--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
   },
   "require": {
     "php": ">=7.2",
+    "ext-json": "*",
     "ext-zip": "*",
     "laravel/framework": "^5.8|6.*",
     "guzzlehttp/guzzle": "6.*"
