--- a/composer.json
+++ b/composer.json
@@ -55,8 +55,12 @@
     "guzzlehttp/guzzle": "6.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0",
+    "dg/bypass-finals": "^1.1",
     "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^4.0"
+    "orchestra/testbench": "^4.0",
+    "phpunit/phpunit": "^8.0"
+  },
+  "scripts": {
+    "test": "./vendor/bin/phpunit"
   }
 }
