Fix invalid version string

--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
     "php": ">=7.3",
     "ext-json": "*",
     "ext-zip": "*",
-    "laravel/framework": "^6.*|^7.*",
+    "laravel/framework": "^6.0|^7.0",
     "guzzlehttp/guzzle": "6.*"
   },
   "require-dev": {
