--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,8 @@
   "config": {
     "sort-packages": true
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "extra": {
     "laravel": {
       "providers": [
@@ -56,9 +58,9 @@
   },
   "require-dev": {
     "dg/bypass-finals": "^1.1",
-    "mockery/mockery": "^1.0",
-    "orchestra/testbench": "^4.0",
-    "phpunit/phpunit": "^8.0"
+    "mockery/mockery": "^1.3",
+    "orchestra/testbench": "4.*|5.*",
+    "phpunit/phpunit": "^8.4|^9.0"
   },
   "scripts": {
     "test": "./vendor/bin/phpunit"
