--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
   "autoload": {
     "psr-4": {
       "Codedge\\Updater\\": "src/"
-    }
+    },
+    "files": [
+        "src/helpers.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
@@ -59,10 +62,10 @@
   "require-dev": {
     "dg/bypass-finals": "^1.1",
     "mockery/mockery": "^1.3",
-    "orchestra/testbench": "4.*|5.*",
+    "orchestra/testbench": "^4.0|^5.0",
     "phpunit/phpunit": "^8.4|^9.0"
   },
   "scripts": {
-    "test": "./vendor/bin/phpunit"
+    "test": "/vendor/bin/phpunit"
   }
 }
