--- a/composer.json
+++ b/composer.json
@@ -61,11 +61,12 @@
   },
   "require-dev": {
     "dg/bypass-finals": "^1.1",
+    "mikey179/vfsstream": "^1.6",
     "mockery/mockery": "^1.3",
     "orchestra/testbench": "^4.0|^5.0",
     "phpunit/phpunit": "^8.4|^9.0"
   },
   "scripts": {
-    "test": "/vendor/bin/phpunit"
+    "test": "./vendor/bin/phpunit"
   }
 }
