--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,9 +6,11 @@ jobs:
     strategy:
       matrix:
         php: ['7.3', '7.4']
-        laravel: [6.*, 7.*]
+        laravel: [6.*, 7.*, 8.*]
         dependency-version: [prefer-stable]
         include:
+          - laravel: 8.*
+            testbench: 6.*
           - laravel: 7.*
             testbench: 5.*
           - laravel: 6.*
