--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
     "php": ">=7.3",
     "ext-json": "*",
     "ext-zip": "*",
-    "laravel/framework": "^6.0|^7.0",
+    "laravel/framework": "^6.0|^7.0|^8.0",
     "guzzlehttp/guzzle": "6.*"
   },
   "require-dev": {
