--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
     }
   },
   "require": {
-    "php": ">=7.3",
+    "php": "^7.3|^7.4|^8.0",
     "ext-json": "*",
     "ext-zip": "*",
     "laravel/framework": "^6.0|^7.0|^8.0",
