--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ['7.3', '7.4']
+        php: ['7.3', '7.4', '8.0']
         laravel: [6.*, 7.*, 8.*]
         dependency-version: [prefer-stable]
         include:
