--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
     "dg/bypass-finals": "^1.1",
     "mikey179/vfsstream": "^1.6",
     "mockery/mockery": "^1.3",
-    "orchestra/testbench": "^4.0|^5.0",
+    "orchestra/testbench": "^6.4.0",
     "phpunit/phpunit": "^8.4|^9.0"
   },
   "scripts": {
