--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,7 @@
     "mikey179/vfsstream": "^1.6",
     "mockery/mockery": "^1.3",
     "orchestra/testbench": "^6.4.0",
-    "phpunit/phpunit": "^8.4|^9.0"
+    "phpunit/phpunit": "^9.4.3"
   },
   "scripts": {
     "test": "./vendor/bin/phpunit"
