--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
     "php": "^7.3|^7.4|^8.0",
     "ext-json": "*",
     "ext-zip": "*",
-    "laravel/framework": "^6.0|^7.0|^8.0",
+    "laravel/framework": "^8.28.1",
     "guzzlehttp/guzzle": "6.*|7.*"
   },
   "require-dev": {
