--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^7.4 || ^8.0",
+        "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "ext-zip": "*",
         "guzzlehttp/guzzle": "6.* || 7.*",
