Fix deprecated stream method

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         {
             "name": "Holger Lösken",
             "email": "holger.loesken@codedge.de",
-            "homepage": "http://codedge.de",
+            "homepage": "https://codedge.de",
             "role": "Developer"
         }
     ],
