--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "ext-zip": "*",
-        "guzzlehttp/guzzle": "6.* || 7.*",
+        "guzzlehttp/guzzle": "^7.4.0",
         "laravel/framework": "^8.64.0"
     },
     "require-dev": {
