--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         "source": "https://github.com/codedge/laravel-selfupdater"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^7.4 || ^8.0 || ^8.1",
         "ext-json": "*",
         "ext-zip": "*",
         "guzzlehttp/guzzle": "^7.4.1",
-        "laravel/framework": "^8.83.1"
+        "laravel/framework": "^8.83.1 || ^9.0"
     },
     "require-dev": {
         "dg/bypass-finals": "^1.3",
