--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,14 @@
         "php": "^7.4 || ^8.0 || ^8.1",
         "ext-json": "*",
         "ext-zip": "*",
-        "guzzlehttp/guzzle": "^7.4.1",
-        "laravel/framework": "^8.83.1 || ^9.0"
+        "guzzlehttp/guzzle": "^7.0",
+        "laravel/framework": "^8.0 || ^9.0"
     },
     "require-dev": {
         "dg/bypass-finals": "^1.3",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.5",
-        "orchestra/testbench": "^6.24.1",
+        "orchestra/testbench": "^6.0 || ^7.0",
         "phpunit/phpunit": "^9.5.14"
     },
     "minimum-stability": "dev",
