--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "ext-json": "*",
         "ext-zip": "*",
         "guzzlehttp/guzzle": "^7.0",
-        "laravel/framework": "^8.0 || ^9.0"
+        "laravel/framework": "^8.0 || ^9.0",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.0"
     },
     "require-dev": {
         "dg/bypass-finals": "^1.3",
@@ -54,7 +56,10 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     },
     "extra": {
         "laravel": {
