--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "dg/bypass-finals": "^1.3",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.5",
-        "orchestra/testbench": "^6.0 || ^7.0",
+        "orchestra/testbench": "^6.24.1",
         "phpunit/phpunit": "^9.5.19"
     },
     "minimum-stability": "dev",
