normalize composer.json

--- a/composer.json
+++ b/composer.json
@@ -56,10 +56,10 @@
         }
     },
     "config": {
-        "sort-packages": true,
         "allow-plugins": {
             "phpstan/extension-installer": true
-        }
+        },
+        "sort-packages": true
     },
     "extra": {
         "laravel": {
