--- a/composer.json
+++ b/composer.json
@@ -73,6 +73,7 @@
     },
     "scripts": {
         "phpstan": "./vendor/bin/phpstan",
-        "test": "./vendor/bin/phpunit"
+        "test": "./vendor/bin/phpunit",
+        "test-coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-html=build/coverage-html"
     }
 }
