--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "ext-zip": "*",
         "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^8.83.10",
+        "league/uri": "^6.5",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-phpunit": "^1.1"
     },
