--- a/.github/workflows/composer-normalize.yml
+++ b/.github/workflows/composer-normalize.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Normalize composer.json
         run: |
+          composer config allow-plugins.ergebnis/composer-normalize true
           composer global require ergebnis/composer-normalize
           composer normalize --indent-style=space --indent-size=4 --no-check-lock --no-update-lock --no-interaction --ansi
 
