--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,21 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ['7.4', '8.0', '8.1']
-        laravel: [7.*, 8.*, 9.*]
+        php: ['8.0', '8.1']
+        laravel: [9.*]
         dependency-version: [prefer-stable]
         include:
           - laravel: 9.*
             testbench: 7.*
-          - laravel: 8.*
-            testbench: 6.*
-          - laravel: 7.*
-            testbench: 5.*
-        exclude:
-          - laravel: 9.*
-            php: 7.4
-          - laravel: 7.*
-            php: 8.1
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
     steps:
       - name: Checkout code
