--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         "source": "https://github.com/codedge/laravel-selfupdater"
     },
     "require": {
-        "php": "^7.4 || ^8.0 || ^8.1",
+        "php": "^8.0 || ^8.1",
         "ext-json": "*",
         "ext-zip": "*",
-        "guzzlehttp/guzzle": "^7.5",
-        "laravel/framework": "^8.83.25",
+        "guzzlehttp/guzzle": "^7.5.0",
+        "laravel/framework": "^9",
         "league/uri": "^6.7",
         "phpstan/extension-installer": "^1.2",
         "phpstan/phpstan-phpunit": "^1.2"
@@ -38,7 +38,7 @@
         "dg/bypass-finals": "^1.3",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.5",
-        "orchestra/testbench": "^6.25.1",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.5.26"
     },
     "minimum-stability": "dev",
