Fix composer normalize

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
     },
     "config": {
         "allow-plugins": {
+            "ergebnis/composer-normalize": true,
             "phpstan/extension-installer": true
         },
         "sort-packages": true
