Fix league/uri version

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "ext-zip": "*",
         "guzzlehttp/guzzle": "^7.5.0",
         "laravel/framework": "^9",
-        "league/uri": "^6.7",
+        "league/uri": "~6.7|~6.8",
         "phpstan/extension-installer": "^1.2",
         "phpstan/phpstan-phpunit": "^1.2"
     },
