--- a/composer.json
+++ b/composer.json
@@ -25,21 +25,21 @@
         "source": "https://github.com/codedge/laravel-selfupdater"
     },
     "require": {
-        "php": "^8.0 || ^8.1",
+        "php": "^8.1",
         "ext-json": "*",
         "ext-zip": "*",
         "guzzlehttp/guzzle": "^7.5.0",
-        "laravel/framework": "^9",
-        "league/uri": "~6.7|~6.8",
+        "illuminate/support": "^10",
+        "league/uri": "~6.7 || ~6.8",
         "phpstan/extension-installer": "^1.2",
-        "phpstan/phpstan-phpunit": "^1.3"
+        "phpstan/phpstan-phpunit": "^1.2"
     },
     "require-dev": {
-        "dg/bypass-finals": "^1.3",
+        "dg/bypass-finals": "^1.4",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.5",
-        "orchestra/testbench": "^7.20",
-        "phpunit/phpunit": "^9.5.28"
+        "orchestra/testbench": "^8.0",
+        "phpunit/phpunit": "^9.5.26"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
